# gl-rl

./: CMakeLists.txt  README.md
src/: graphics.cpp  graphics.h  grid.cpp  grid.h  main.cpp  patterns.cpp  patterns.h  simulation.cpp  simulation.h
